--- a/Jira.Web/Views/User/Login.cshtml
+++ b/Jira.Web/Views/User/Login.cshtml
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 d-flex justify-content-center align-items-center border-0 rounded-lg auth-h100">
-                            <div class="w-100 p-3 p-md-5 card border-0 bg-dark text-light" style="max-width: 32rem;">
+                            <div class="w-100 p-3 p-md-5 card border-0 text-bg-danger text-light" style="max-width: 32rem;">
                                 <!-- Form -->
                                 <form class="row g-1 p-3 p-md-4" method="post" action="/user/signin">
                                     <div class="col-12 text-center mb-1 mb-lg-5">
